--- a/README
+++ b/README
@@ -3,17 +3,21 @@ NAME
 
 SYNOPSIS
       use Data::Validate::Domain qw(is_domain);
-  
-      if(is_domain($suspect)){
-            print "Looks like a domain name";
-      } else {
-            print "Not a domain name\n";
-      }
+ 
+      # as a function 
+      my $test = is_domain($suspect);
+      die "$test is not a domain" unless defined $test;
+
+      or
+
+      my $test = is_domain($suspect,\%options);
+      die "$test is not a domain" unless defined $test;
   
       # or as an object
-      my $v = Data::Validate::Domain->new();
-  
-      die "not a domain" unless ($v->is_domain('domain.com'));
+      my $v = Data::Validate::Domain->new(%options);
+
+      my $test = $v->is_domain($suspect);
+      die "$test is not a domain" unless defined $test;
 
 DESCRIPTION
     This module collects domain validation routines to make input
@@ -30,14 +34,41 @@ FUNCTIONS
     new - constructor for OO usage
           $obj = Data::Validate::Domain->new();
 
+          my %options = (
+                        domain_allow_single_label => 1,
+                        domain_private_tld => {
+                                'privatetld1 '   =>      1,
+                                'privatetld2'    =>      1,
+                        }
+          );
+
+          $obj = Data::Validate::Domain->new(%options);
+
         *Description*
             Returns a Data::Validator::Domain object. This lets you access
             all the validator function calls as methods without importing
             them into your namespace or using the clumsy
             Data::Validate::Domain::function_name() format.
 
-        *Arguments*
-            None
+        *Options*
+
+            domain_allow_single_label
+                By default is_domain will fail if you ask it to verify a
+                domain that only has a single label i.e. 'frii.com' is good,
+                but 'com' would fail. If you set this option to a true value
+                then is_domain will allow single label domains through. This
+                is most likely to be useful in combination with
+                domain_private_tld
+
+            domain_private_tld
+                By default is_domain requires all domains to have a valid
+                TLD (i.e. com, net, org, uk, etc), this is verified using
+                the Net::Domain::TLD module. This behavior can be extended
+                by supplying a hash reference to the domain_private_tld
+                method keyed by the additional TLD's you would like
+                is_domain to accept. An example of where this would be
+                useful would be a private network with a local private
+                domain.
 
         *Returns*
             Returns a Data::Validate::Domain object
@@ -46,10 +77,17 @@ FUNCTIONS
           is_domain($value);
           or
           $obj->is_domain($value);
+          or
+          is_domain($value,\%options);
+          or
+          $obj->is_domain($value,\%options);
 
         *Description*
             Returns the untainted domain name if the test value appears to
             be a well-formed domain name.
+
+            Note: See new for list of options and how those alter the
+            behavior of this funciton.
 
         *Arguments*
 
@@ -78,7 +116,7 @@ FUNCTIONS
                sign (-), and period (.).  Note that periods are only allowed when
                they serve to delimit components of "domain style names".
 
-                No blank or space characters are permitted as part of a
+               No blank or space characters are permitted as part of a
                name. No distinction is made between upper and lower case.  The first
                character must be an alpha character [Relaxed in RFC 1123] .  The last 
                character must not be a minus sign or period.
@@ -106,10 +144,17 @@ FUNCTIONS
           is_hostname($value);
           or
           $obj->is_hostname($value);
+          or
+          is_hostname($value,\%options);
+          or
+          $obj->is_hostname($value,\%options);
 
         *Description*
             Returns the untainted hostname if the test value appears to be a
             well-formed hostname.
+
+            Note: See new for list of options and how those alter the
+            behavior of this funciton.
 
         *Arguments*
 
@@ -134,10 +179,17 @@ FUNCTIONS
           is_domain_label($value);
           or
           $obj->is_domain_label($value);
+          or
+          is_domain_label($value,\%options);
+          or
+          $obj->is_domain_label($value,\%options);
 
         *Description*
             Returns the untainted domain label if the test value appears to
             be a well-formed domain label.
+
+            Note: See new for list of options and how those alter the
+            behavior of this funciton.
 
         *Arguments*
 
@@ -165,8 +217,11 @@ ACKNOWLEDGEMENTS
         Thanks to Richard Sonnen <sonnen@richardsonnen.com> for writing the
         Data::Validate module.
 
+        Thanks to Len Reed <lreed@levanta.com> for helping develop the
+        options mechanism for Data::Validate modules.
+
 COPYRIGHT AND LICENSE
-        Copyright (c) 2005 Neil Neely.
+        Copyright (c) 2005-2006 Neil Neely.
 
         This library is free software; you can redistribute it and/or modify
         it under the same terms as Perl itself, either Perl version 5.8.2
