--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Data::Validate::Domain.
 
+0.06  Wed May  16 2007
+	- Updated contact information to be neil@neely.cx, this is a purely cosmetic change
+
+0.05  Fri Dec  04 14:03:58 2006
+	- Added Support for compiled regular expressions to the private_domain_tld option.
+		- Thanks to Berhhard Graf <graf@augensalat.de> for the suggestion.
+
 0.04  Fri Dec  01 10:21:04 2006
 	- Added support for options to alter behavior of is_domain with these new
 	  options is_domain will be able to work with private domains with custom TLD's.
